# django-series

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
django_series/: __init__.py  admin.py  apps.py  schema.py
django_series_example/: apps.py  models.py  tests.py
django_series_project/: asgi.py  settings.py  urls.py  wsgi.py
