[metadata]
name = django_-eries
version = attr: src.VERSION
description = Easy stats app
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
 
[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    bin/first.py
    bin/second.py
install_requires =
    requests
    importlib; python_version == "3.9"

[bdist_rpm]
release = 1
packager = Alexander Forselius <drsounds@gmail.com>
doc_files = README.txt
            doc/
            examples/
